[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PPOCRLabel"
version = "2.1.4"
dependencies = [
  "pyqt5",
  "paddleocr",
  "xlrd==2.0.1",
  "tqdm",
]
requires-python = ">= 3.9"
authors = [
  {name = "PaddlePaddle", email = "Paddle-better@baidu.com"}
]
description = "PPOCRLabelv2 is a semi-automatic graphic annotation tool suitable for OCR field, with built-in PP-OCR model to automatically detect and re-recognize data. It is written in Python3 and PyQT5, supporting rectangular box, table, irregular text and key information annotation modes. Annotations can be directly used for the training of PP-OCR detection and recognition models."
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["ocr", "textdetection", "textrecognition", "paddleocr", "crnn", "east", "star-net", "rosetta", "ocrlite", "db", "chineseocr", "chinesetextdetection", "chinesetextrecognition"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
  "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/PFCCLab/PPOCRLabel"
Documentation = "https://github.com/PFCCLab/PPOCRLabel/blob/master/README.md"
Repository = "https://github.com/PFCCLab/PPOCRLabel.git"
Issues = "https://github.com/PFCCLab/PPOCRLabel/issues"

[project.gui-scripts]
PPOCRLabel = "PPOCRLabel.PPOCRLabel:main"

[tool.setuptools]
package-dir = {PPOCRLabel = ""}
package-data = {PPOCRLabel = ["libs/*", "resources/strings/*", "resources/icons/*"]}
